--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src",
-        "lib": ["esnext"],
+        "lib": ["ES2022", "DOM"],
         "target": "ESNext",
         "moduleResolution": "NodeNext",
         "module": "NodeNext",
